# olm

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  style.css  upload.sh
.github/workflows/: deploy.yml  tests.yml
outbreaks/: avian-influenza-2024.yml  avian-influenza.yml  marburg.yml  mpox-2024.yml
outbreaks/includes/mpox-2024/: 2024-10-09.yml=  2024-10-17_footnotes.md  2024-11-07_footnotes.md
outbreaks/templates/: _footer.html  _header.html  avian-influenza-2024.html  avian-influenza.html  marburg.html  mpox-2024.html
outbreaks/templates/avian-influenza-2024-content/: context_background.md  curator_notes.md  data_analytical_notes.md
src/obr/: __init__.py  plots.py  sources.py  theme.py  util.py
src/obr/outbreaks/: __init__.py  mpox-2024.html
src/olm/: __init__.py  lint.py  plots.py  report.py  sources.py  theme.py  types.py  util.py
src/olm/outbreaks/: __init__.py  _footer.html  _header.html  avian_influenza.py  avian_influenza_2024.py  marburg.html  mpox-2024.html  mpox2024.py
static/: 403.html  404.html  error.html  index.html  style.css
tests/: test_data.csv  test_plots.py  test_status_data.csv  test_util.py
